--- a/hip/templates/views/reports/heritage-resource.htm
+++ b/hip/templates/views/reports/heritage-resource.htm
@@ -74,25 +74,17 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
     <!-- End Fixed Nav for Report -->
 
-
     <!--=== Map Block ===-->
-
-      <div class="row-fluid">
-        <div class="span12">
-          <div id="map" class="map">
-          <div style="display:none;" id="map-data">
-            <input type="hidden" id="map-content" value='{{ report_info.SPATIAL_COORDINATES_GEOMETRY_E47 }}'>
-          </div>
-            <div id="toolbox" style='position:absolute; top:220px; right:8px; padding:3px; border-radius:4px; background: rgba(255, 255, 255, 0.7); z-index:100; color:#fff'>
-            <ul id="layerswitcher" style='margin:0; padding:10px; border-radius:4px; background:rgba(0, 60, 136, 0.5); list-style-type:none;'>
-            <li><label><input type="radio" name="layer" value="0" checked> Road</label></li>
-            <li><label><input type="radio" name="layer" value="1"> Aerial</label></li>
-            </ul>
-            </div>
-          </div>
-
+        <div id="map" class="map map-space-panel"></div>
+        <div id="olmap" class="fill"></div>
+        <div style="display:none;" id="map-data">
+        <input type="hidden" id="map-content" value='{{ report_info.SPATIAL_COORDINATES_GEOMETRY_E47 }}'>
         </div>
-      </div>
+                <div class="col-xs-12" style="margin-top: -630px; float:right; width:260px">
+                    <div class="btn-group" role="group" data-bind='foreach: baseLayers'>
+                    <button data-bind="attr: { id: id }, text: name" type="button" class="btn btn-primary basemap info-click" style=""></button>
+                    </div>
+            </div>
     <!--=== End Map Block ===-->
 
 
