icons for layers

--- a/hip/templates/map/layer-info.htm
+++ b/hip/templates/map/layer-info.htm
@@ -5,7 +5,7 @@
             {% for type in resource_types %}
             "{{type.resourcetypeid}}": {
                 id: "{{type.resourcetypeid}}",
-                icon: "{{type.icon}}",
+                icon: "{{type.icon_class}}",
                 name: "{{type.name}}",
                 description: "{{type.description}}",
                 categories: [
