get Temporal filter to the point of submitting queries

--- a/hip/templates/search.htm
+++ b/hip/templates/search.htm
@@ -85,6 +85,8 @@
         {% include 'views/search-results.htm' %}
     </div>
 
+    <input id="formdata" name="formdata" type="hidden" value="{{formdata}}"/>
+
 </div>
 
 {% endblock content %}
