--- a/hip/templates/views/search-results.htm
+++ b/hip/templates/views/search-results.htm
@@ -140,7 +140,7 @@
 
 
                         <!-- Start/End Date Pickers -->
-                        <div class="row" style="min-height: 250px;">
+                        <div class="row" style="min-height: 180px;">
 
                             <h4 class="margin-top-0 margin-bottom-5 margin-left-15" style="font-style: normal">
                                 Start/End Dates <small>(show resources that meet these date criteria)</small>
@@ -150,33 +150,49 @@
                             <div class="col-sm-12 padding-left-0 margin-bottom-20">
 
                                 <!-- Time Criteria Entry Form for screens > xs -->
-                                <form class="form-inline margin-left-15 hidden-xs" role="form">
+                                <form class="form-inline hidden-xs" role="form">
                         
                                     <div class="form-group margin-top-5 padding-bottom-10" style="width: 100%">
                                         
+                                        <div class="col-sm-4" style="padding-right: 5px;">
+                                            <div style="height: 36px; padding-top: 2px; width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder="type" data-bind="select2: { data: domains.date_types, placeholder: 'Type', viewModel: editing.filters, conceptKey: 'date_types'}">
+                                            </div>
+                                        </div>
+                                 
                                         <!-- Date Type -->
-                                        <select style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form" id="DateType" placeholder="type">
+                                     <!--    <select style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form" id="date-type" placeholder="type">
                                             <option value="00">Search by Date</option>
-                                            <option value="AK">Birth Date</option>
-                                            <option value="HI">Date of Death</option>
-                                            <option value="CA">Built Date</option>  
-                                        </select>
+                                            {% for date_type in date_types %}
+                                            <option value="{conceptid:'{{date_type.conceptid}}',entitytypeid:'{{date_type.entitytypeid}}'}">{{date_type.value}}</option>
+                                            {% endfor %} 
+                                        </select> -->
                                         <!-- Date Type -->
                                         
                                         <!-- Date comparison -->
-                                        <select style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form" id="date-operator" placeholder="">
-                                            <option value="01">Before</option>
-                                            <option value="02">On</option>
-                                            <option value="03">After</option>  
-                                        </select>
+                                        <div class="col-sm-3" style="padding-right: 5px;">
+                                            <div style="height: 36px; padding-top: 2px; width:100%" class="select2 arches-select2-crud-form" id="date-operator" placeholder="" data-bind="select2: { data: domains.date_operators, placeholder: '', viewModel: editing.filters, conceptKey: 'date_operators'}">
+                                            </div>
+                                        </div>
+
+                                        <!-- <select style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form" id="date-operator" placeholder="" data-bind="select2: { data: domains.date_operators, placeholder: 'Type', viewModel: editing.filters, conceptKey: 'date_operators__conceptid'}">
+                                            <option value="<">Before</option>
+                                            <option value="=">On</option>
+                                            <option value=">">After</option>  
+                                        </select> -->
                                         <!-- Date Type -->
 
-                                        <input class="form-control" style="width: 25%; height: 32px;" id="" placeholder="Date">
+                                        
+                                        <div class="col-sm-3 form-group" style="padding-right: 5px;">
+                                            <div class="input-group datetimepicker" style ="width:100%; height: 36px; padding-top: 2px;" >
+                                                <input type="text" id="date" placeholder="Date assessed" class="form-control datepicker" data-date-format="DD/MM/YYYY" data-bind='{value: editing.filters.date}' >
+                                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                            </div>
+                                        </div>
+                                     
                                         
                                         <!-- Add Button -->
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-primary" style="height: 32px;"><i class=" fa fa-plus"></i> Add</button>
-                                            
+                                        <div class="col-sm-2 btn-group" style="padding-top: 3px;">
+                                            <button type="button" class="add-button btn btn-primary" style="height: 32px;" id="add-temporal-filter-btn"><i class=" fa fa-plus"></i> Add</button>
                                         </div>
                                         <!-- End Add Button -->
 
@@ -184,46 +200,8 @@
                                 </form>
                                 <!-- Time Criteria Entry Form for screens > xs -->
 
-                                <!-- Time Criteria Entry Form for screens = xs -->
-                                <form class="form-inline margin-left-15 hidden-sm hidden-md hidden-lg" role="form">
-                        
-                                    <div class="form-group margin-top-5 padding-bottom-10" style="width: 100%">
-                                        
-                                        <!-- Date Type -->
-                                        <select style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form" id="DateType" placeholder="type">
-                                            <option value="00">Search by Date</option>
-                                            <option value="AK">Birth Date</option>
-                                            <option value="HI">Date of Death</option>
-                                            <option value="CA">Built Date</option>  
-                                        </select>
-                                        <!-- Date Type -->
-                                        
-                                        <!-- Date comparison -->
-                                        <select style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form" id="date-operator" placeholder="">
-                                            <option value="01">Before</option>
-                                            <option value="02">On</option>
-                                            <option value="03">After</option>  
-                                        </select>
-                                        <!-- Date Type -->
-
-                                        <input class="form-control" style="width: 100%; height: 32px;" id="" placeholder="Date">
-
-                                        <!-- Spacer -->
-                                        <div style="margin-top: 5px;"></div>
-                                        
-                                        <!-- Add Button -->
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-primary" style="height: 32px;"><i class=" fa fa-plus"></i> Add</button> 
-                                        </div>
-                                        <!-- End Add Button -->
-
-                                    </div>
-                                </form>
-                                <!-- Time Criteria Entry Form for screens = xs -->
-
                             </div>
                             <!-- End Form for Small, Md, Lg Screens -->
-
 
                             <!-- Show seleted filters -->
                             <div class="col-xs-12">
@@ -234,24 +212,19 @@
                                             You have selected the following date filters:
                                         </dd>
 
-                                        <dd class="margin-left-5">
-                                            <div class="arches-crud-record">
-                                                <a href="#" title="Remove this filter"><i class="arches-CRUD-delete fa fa-trash-o"></i></a>
-                                                <span class="text-muted">
-                                                    Built Date Before Feb 18, 1945
-                                                </span>
+                                        <dd class="margin-left-5" style="display: block;" data-bind="visible: true">
+                                            <div data-bind="visible: filters().length == 0" class="txt-color-blue">{% trans "No Filters Defined" %}</div>   
+                                            
+                                            <div data-bind='foreach: filters'>
+                                                <div class="arches-crud-record">
+                                                    <a href="javascript:void(0)" class="arches-CRUD-child" title="Remove this filter"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                                                    <a href="javascript:void(0)" class="text-muted arches-CRUD-child arches-CRUD-edit" data-bind='attr: {"data-index": $index}' title="Edit this name"><span data-bind='text: date_types__label + " " + date_operators__label + " " + date' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier"></span>
+                                                    </a>
+                                                </div>
                                             </div>
                                         </dd>
 
                                     </dl>
-                                </div>
-                            </div>
-
-                            <!-- Clear Filters -->
-                            <div class="col-xs-12">
-                                <div class="pull-right" style="margin-top: 10px; padding-left: 10px; margin-right: 20px;">
-                                    <button class="btn btn-default" type="button">Close</button>
-                                    <button class="btn btn-warning" type="button">Clear Filters</button>
                                 </div>
                             </div>
 
