--- a/hip/templates/search.htm
+++ b/hip/templates/search.htm
@@ -27,12 +27,12 @@
 
                 <div class="btn-group pull-right">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                        Search Tools &nbsp;
+                        Search Tools
                         <i class="fa fa-chevron-down"></i>
                         <span class="sr-only">Toggle Dropdown</span>                            
                     </button>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a id="view-saved-searches">View Save Searches</a></li>
+                        <li><a id="view-saved-searches">View Saved Searches</a></li>
                         <li class="divider"></li>
                         <li><a href="#">Export results to .SHP</a></li>
                         <li><a href="#">Export results to .CSV</a></li>
@@ -67,11 +67,7 @@
                 <button class="btn btn-success btn-xs" id="time-filter-button" style=""> 
                     <i class="fa fa-clock-o"></i> Filter by time
                 </button>
-            </div>        
-
-            <div class="col-xs-4 hidden" style="margin-top: 4px; margin-bottom: -6px;text-align: right; margin-right: -26px; margin-left: 26px;" id="map-extent-filter-tag">
-                <input id="filters" class="tagsinput" value="Map extent filter" data-role="tagsinput">
-            </div>        
+            </div>  
 
         </div>
     </h2>   
