--- a/hip/templates/views/search-results.htm
+++ b/hip/templates/views/search-results.htm
@@ -20,16 +20,17 @@
                                     <i class="fa fa-chevron-down"></i>
                                     <span class="sr-only">Toggle Dropdown</span>                            
                                 </button>
-                                <ul id="map-tools-btn" class="dropdown-menu" role="menu">
-                                    <li><a id="map-extent-filter" data-tooltype="map-extent" href="#" class="info-link"><i class="fa fa-xxx" data-bind="css: {'fa-check' : type() == 'bbox'}"></i>Limit search results to map extent</a></li>
+                                <ul id="map-tools-dropdown" class="dropdown-menu" role="menu">
+                                    <li name="map-tools"><a id="map-extent-filter" data-tooltype="map-extent" href="#" class="info-link"><i class="fa fa-xxx" data-bind="css: {'fa-check' : geometry.type() == 'bbox'}"></i>Limit search results to map extent</a></li>
                                     <li class="divider"></li>
-                                    <li><a id="polygon-filter" data-tooltype="Polygon" href="#" class="info-link polygon-filter"><i class="fa fa-xxx" data-bind="css: {'fa-check' : type() == 'Polygon'}"></i>Draw Polygon to Filter Map</a></li>
-                                    <li><a id="line-filter" data-tooltype="LineString" href="#"><i class="fa fa-xxx" data-bind="css: {'fa-check' : type() == 'LineString'}"></i>Draw Line to Filter Map</a></li>
-                                    <li><a id="point-filter" data-tooltype="Point" href="#"><i class="fa fa-xxx" data-bind="css: {'fa-check' : type() == 'Point'}"></i>Draw Point to Filter Map</a></li>
+                                    <li name="map-tools"><a id="polygon-filter" data-tooltype="Polygon" href="#" class="info-link polygon-filter"><i class="fa fa-xxx" data-bind="css: {'fa-check' : geometry.type() == 'Polygon'}"></i>Draw Polygon to Filter Map</a></li>
+                                    <li name="map-tools"><a id="line-filter" data-tooltype="LineString" href="#"><i class="fa fa-xxx" data-bind="css: {'fa-check' : geometry.type() == 'LineString'}"></i>Draw Line to Filter Map</a></li>
+                                    <li name="map-tools"><a id="point-filter" data-tooltype="Point" href="#"><i class="fa fa-xxx" data-bind="css: {'fa-check' : geometry.type() == 'Point'}"></i>Draw Point to Filter Map</a></li>
+                                    <li class="divider"></li>
                                     <li>
-                                        <a id="spatial-buffer" href="#" style="padding-left: 13px;"><i class="fa fa-xxx"></i>Buffer (ft)<input type="text" class="" style="width: 30%;" placeholder="100"/></a>
+                                        <a id="spatial-buffer" href="#" style="padding-left: 13px;"><i class="fa fa-xxx"></i>Buffer (ft)<input id="map-buffer" type="text" class="" style="width: 30%; margin-left: 5px;" data-bind="textInput: buffer.width" /></a>
                                     </li>
-                                </ul>
+                                </ul>                        
                             </div>
                         </div>
                     </div>
