showing entity type name along w/ icon on search results

--- a/hip/templates/views/search-results.htm
+++ b/hip/templates/views/search-results.htm
@@ -265,7 +265,7 @@
                                 <a class="arches-search-title" style="" href="#" data-bind="text: primaryname"></a> 
                                 &nbsp;
                                 <span class="">
-                                    <small class="arches-search-subtitle"><i data-bind="attr: { class: typeIcon }"></i><span data-bind="entitytypeid"></span></small>
+                                    <small class="arches-search-subtitle"><i data-bind="attr: { class: typeIcon }"></i><span data-bind="text: typeName"></span></small>
                                 </span>
                             </h4>
 
