adding placeholder related resources graph view

--- a/hip/templates/views/search-results.htm
+++ b/hip/templates/views/search-results.htm
@@ -311,7 +311,7 @@
                             </ul> 
                             <!-- End Item Creator/Editor -->
 
-                            <div class="svg arches-related-resource-panel" id="rr-1-panel" style="display: none;"></div>
+                            <div class="svg arches-related-resource-panel" style="display: none;"></div>
 
                             <!-- Spacer -->
                             <hr class="margin-10 margin-top-20">
