Style changes to search page

--- a/hip/templates/views/search-results.htm
+++ b/hip/templates/views/search-results.htm
@@ -9,7 +9,7 @@
         <div id="map-filter" class="" style="display: none;">
 
             <div class="row" style="margin-left: -19px;">
-                <div class="col-xs-12" style="z-index: 900;">
+                <div class="col-xs-2 col-xs-offset-10" style="z-index: 900;">
 
                     <div class="row" style="margin-right: 0px; margin-top: 0px;">
                         <!-- Filter Tools -->
