--- a/hip/templates/search.htm
+++ b/hip/templates/search.htm
@@ -15,19 +15,29 @@
         <div class="row">
             
             <!-- Search Widget -->
-            <div class="col-xs-12 col-md-8">
+            <div class="col-xs-12 col-md-7 col-lg-8">
                 <div class="form-group">       
                     <input class="select2 resource_search_widget" name="" style="width:100%" placeholder="{% trans "Search for a resource..." %}" value="">
                 </div>
             </div>
             <!-- End Search Widget -->
 
+
             <!-- Advanced Search Option -->
-            <div class="col-sm-3 col-sm-offset-1">
+            <div class="col-md-5 col-lg-4">
+
+                <button class="btn btn-success btn" id="map-filter-button" style=""> 
+                    <i class="fa fa-map-marker"></i> Map search
+                </button>
+
+                <button class="btn btn-success btn" id="time-filter-button" style=""> 
+                    <i class="fa fa-clock-o"></i> Time search
+                </button>
+                
 
                 <div class="btn-group pull-right">
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                        Search Tools
+                        Tools
                         <i class="fa fa-chevron-down"></i>
                         <span class="sr-only">Toggle Dropdown</span>                            
                     </button>
@@ -55,25 +65,15 @@
     <h2 style="margin-bottom:8px;">
         <div class="row" id="search-results-count" data-count="{{resource_count}}">        
             
-            <div class="col-xs-4">
-                <span class="text-muted margin-left-5" style="margin-bottom: 5px;">Survey LA Contains: <span style="font-size:18px;" data-bind="text: total() + ' {% trans "Results" %}'"></span></span>                                 
+            <div class="col-xs-12">
+                <span class="text-muted margin-left-5" style="margin-bottom: 5px;">Or try a popular search: <span style="font-size:18px;" data-bind="text: total() + ' {% trans "Results" %}'"></span></span>                                 
             </div>
-
-            <div class="col-xs-4 hidden-xs">  
-                <button class="btn btn-success btn-xs" id="map-filter-button" style=""> 
-                    <i class="fa fa-map-marker"></i> Filter by map
-                </button>
-
-                <button class="btn btn-success btn-xs" id="time-filter-button" style=""> 
-                    <i class="fa fa-clock-o"></i> Filter by time
-                </button>
-            </div>  
 
         </div>
     </h2>   
     <!-- Results Header -->
 
-    <div class="row" id="saved-searches" style="margin-top:8px;">
+    <div class="row" id="saved-searches" style="margin-top:8px; margin-left:0px; margin-right:0px;">
         {% include 'views/saved-searches.htm' %}
     </div>
 
