--- a/hip/templates/views/search-results.htm
+++ b/hip/templates/views/search-results.htm
@@ -285,7 +285,7 @@
 
                                 <li>
                                     <i class="arches-search-link fa fa-sitemap"></i>&nbsp;
-                                    <a href="#" class="info-link related-resources-graph" id="rr-1"><span class="arches-search-link">{% trans "Related Resources" %}</span></a>
+                                    <a href="#" class="info-link related-resources-graph" id="rr-1" data-bind="attr: {'data-resourceid': resourceid}"><span class="arches-search-link" data-bind="attr: {'data-resourceid': resourceid}">{% trans "Related Resources" %}</span></a>
                                 </li>
 
                             </ul>
