--- a/hip/templates/views/saved-searches.htm
+++ b/hip/templates/views/saved-searches.htm
@@ -21,7 +21,7 @@
     <div class="col-sm-4">
         <div class="servive-block servive-block-default">            
             <i class="icon-custom rounded-x icon-bg-dark fa fa-tasks"></i>
-            <a class= "" href='?page=1&termFilter=%5B%7B"inverted"%3Afalse%2C"type"%3A"term"%2C"context"%3A"NAME.E41"%2C"id"%3A"Brady+Bunch+House+Film+Location"%2C"text"%3A"Brady+Bunch+House+Film+Location"%2C"value"%3A"Brady+Bunch+House+Film+Location"%7D%5D&year_min_max=%5B%5D&temporalFilter=%5B%5D&spatialFilter=%7B"geometry"%3A%7B"type"%3A""%2C"coordinates"%3A%5B%5D%7D%2C"buffer"%3A%7B"width"%3A"0"%2C"unit"%3A"ft"%7D%7D&mapExpanded=true&timeExpanded=false'><h2 class="txt-color-blue">The Brady Bunch!</h2></a>
+            <a class= "" href='?page=1&termFilter=%5B%7B"inverted"%3Afalse%2C"type"%3A"term"%2C"context"%3A"NAME.E41"%2C"id"%3A"Brady%20Bunch%20House%20Film%20Location"%2C"text"%3A"Brady%20Bunch%20House%20Film%20Location"%2C"value"%3A"Brady%20Bunch%20House%20Film%20Location"%7D%5D&year_min_max=%5B%5D&temporalFilter=%5B%5D&spatialFilter=%7B"geometry"%3A%7B"type"%3A""%2C"coordinates"%3A%5B%5D%7D%2C"buffer"%3A%7B"width"%3A"0"%2C"unit"%3A"ft"%7D%7D&mapExpanded=true&timeExpanded=false'><h2 class="txt-color-blue">The Brady Bunch!</h2></a>
             <p>Need I say more?</p>
         </div>
     </div>
@@ -31,7 +31,7 @@
     <div class="col-sm-4">
         <div class="servive-block servive-block-default">
             <i class="icon-custom rounded-x icon-bg-dark fa fa-calendar-o"></i>
-            <a class= "" href='?page=1&termFilter=%5B%5D&year_min_max=%5B1910%2C1930%5D&temporalFilter=%5B%7B"date"%3A"01%2F01%2F1930"%2C"date_types__value"%3A"50639d9a-0d90-40f8-b913-a857daff2eea"%2C"date_types__label"%3A"Built+Date"%2C"date_operators__value"%3A"0"%2C"date_operators__label"%3A"Before"%7D%5D&spatialFilter=%7B"geometry"%3A%7B"type"%3A"Point"%2C"coordinates"%3A%5B-118.40136094641244%2C34.07169289137546%5D%7D%2C"buffer"%3A%7B"width"%3A"50000"%2C"unit"%3A"ft"%7D%7D&mapExpanded=true&timeExpanded=true'><h2 class="txt-color-blue">Kitchen Sink</h2></a>
+            <a class= "" href='?page=1&termFilter=%5B%5D&year_min_max=%5B1910%2C1930%5D&temporalFilter=%5B%7B"date"%3A"01%2F01%2F1930"%2C"date_types__value"%3A"50639d9a-0d90-40f8-b913-a857daff2eea"%2C"date_types__label"%3A"Built%20Date"%2C"date_operators__value"%3A"0"%2C"date_operators__label"%3A"Before"%7D%5D&spatialFilter=%7B"geometry"%3A%7B"type"%3A"Point"%2C"coordinates"%3A%5B-118.40136094641244%2C34.07169289137546%5D%7D%2C"buffer"%3A%7B"width"%3A"50000"%2C"unit"%3A"ft"%7D%7D&mapExpanded=true&timeExpanded=true'><h2 class="txt-color-blue">Kitchen Sink</h2></a>
             <p>Everyting but...</p>
         </div>
     </div>
@@ -39,7 +39,7 @@
     <div class="col-sm-4">
         <div class="servive-block servive-block-default">
             <i class="icon-custom rounded-x icon-bg-dark fa fa-group"></i>
-            <a class= "" href='?page=1&termFilter=%5B%7B"inverted"%3Afalse%2C"type"%3A"concept"%2C"context"%3A"Style"%2C"id"%3A"Modern%2C+Mid-Century"%2C"text"%3A"Modern%2C+Mid-Century"%2C"value"%3A"58fa926d-7652-4930-ab05-eebb4bd00f8b"%7D%5D&year_min_max=%5B%5D&temporalFilter=%5B%5D&spatialFilter=%7B"geometry"%3A%7B"type"%3A""%2C"coordinates"%3A%5B%5D%7D%2C"buffer"%3A%7B"width"%3A"50000"%2C"unit"%3A"ft"%7D%7D&mapExpanded=true&timeExpanded=true'><h2 class="txt-color-blue">Mid-Century Modern Homes</h2></a>
+            <a class= "" href='?page=1&termFilter=%5B%7B"inverted"%3Afalse%2C"type"%3A"concept"%2C"context"%3A"Style"%2C"id"%3A"Modern%2C%20Mid-Century"%2C"text"%3A"Modern%2C%20Mid-Century"%2C"value"%3A"58fa926d-7652-4930-ab05-eebb4bd00f8b"%7D%5D&year_min_max=%5B%5D&temporalFilter=%5B%5D&spatialFilter=%7B"geometry"%3A%7B"type"%3A""%2C"coordinates"%3A%5B%5D%7D%2C"buffer"%3A%7B"width"%3A"50000"%2C"unit"%3A"ft"%7D%7D&mapExpanded=true&timeExpanded=true'><h2 class="txt-color-blue">Mid-Century Modern Homes</h2></a>
             <p></p>
         </div>
     </div>
