get inverted search working for spatial, temporal, and term search

--- a/hip/templates/views/saved-searches.htm
+++ b/hip/templates/views/saved-searches.htm
@@ -31,7 +31,7 @@
     <div class="col-sm-4">
         <div class="servive-block servive-block-default">
             <i class="icon-custom rounded-x icon-bg-dark fa fa-calendar-o"></i>
-            <a class= "" href='?page=1&termFilter=%5B%5D&year_min_max=%5B1910%2C1930%5D&temporalFilter=%5B%7B"date"%3A"01%2F01%2F1930"%2C"date_types__value"%3A"50639d9a-0d90-40f8-b913-a857daff2eea"%2C"date_types__label"%3A"Built%20Date"%2C"date_operators__value"%3A"0"%2C"date_operators__label"%3A"Before"%7D%5D&spatialFilter=%7B"geometry"%3A%7B"type"%3A"Point"%2C"coordinates"%3A%5B-118.40136094641244%2C34.07169289137546%5D%7D%2C"buffer"%3A%7B"width"%3A"50000"%2C"unit"%3A"ft"%7D%7D&mapExpanded=true&timeExpanded=true'><h2 class="txt-color-blue">Kitchen Sink</h2></a>
+            <a class= "" href='?page=1&termFilter=%5B%5D&temporalFilter=%7B"year_min_max"%3A%5B1920%2C2013%5D%2C"filters"%3A%5B%7B"date"%3A"01%2F01%2F1930"%2C"date_types__value"%3A"82773828-583b-4b4b-8f50-625f11223deb"%2C"date_types__label"%3A"Built%20Date"%2C"date_operators__value"%3A"0"%2C"date_operators__label"%3A"Before"%7D%5D%2C"inverted"%3Afalse%7D&spatialFilter=%7B"geometry"%3A%7B"type"%3A"Point"%2C"coordinates"%3A%5B-118.40136094641244%2C34.07169289137546%5D%7D%2C"buffer"%3A%7B"width"%3A"50000"%2C"unit"%3A"ft"%7D%2C"inverted"%3Atrue%7D&mapExpanded=true&timeExpanded=true'><h2 class="txt-color-blue">Kitchen Sink</h2></a>
             <p>Everyting but...</p>
         </div>
     </div>
